# netman

./: .typos.toml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  deny.toml
.github/workflows/: deploy.yml  test.yml
examples/: netman.toml
libnetman/: Cargo.toml
libnetman/src/: lib.rs
libnetman/src/connection/: mod.rs  profile.rs  tests.rs
libnetman/src/error/: mod.rs  tests.rs
libnetman/src/nm/: mod.rs  proxies.rs  tests.rs
libnetman/src/nm/connection_settings/: mod.rs  tests.rs
libnetman/src/nm/modem/: mod.rs  tests.rs
libnetman/src/nm/wifi_settings/: mod.rs  tests.rs
libnetman/src/vpn_plugins/: mod.rs  tests.rs
netman/: Cargo.toml
netman/src/: lib.rs  main.rs
netman/src/app/: mod.rs  tests.rs
netman/src/cli/: mod.rs  tests.rs
netman/src/config/: mod.rs  tests.rs
netman/src/logger/: mod.rs  tests.rs
netman/src/settings/: mod.rs  tests.rs
netman/src/ui/: add_connection_menu.rs  connection_editor.rs  connection_list.rs  delete_confirm_prompt.rs  detail_panel.rs  hidden_network_prompt.rs  mod.rs  password_prompt.rs  pin_prompt.rs  status_bar.rs  tests.rs  vpn_add_menu.rs  vpn_import_prompt.rs
netman/src/ui/text_input/: mod.rs  tests.rs
netman/tests/: integration.rs
