[package]
name = "libnetman"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
description = "Core types and NetworkManager D-Bus integration for netman"
keywords.workspace = true
repository.workspace = true

[features]
default = []
dbus = ["dep:zbus", "dep:tokio", "dep:tokio-stream", "dep:uuid"]

[dependencies]
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
zbus = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tokio-stream = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3"
