[package]
name = "netman"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
description = "TUI applet analogue of network-manager-applet"
keywords.workspace = true
repository.workspace = true

[features]
default = ["dbus"]
# Enables live NetworkManager interaction via D-Bus.
dbus = ["libnetman/dbus"]
# Mobile broadband (GSM / LTE / 5G) support.
mobile = ["libnetman/mobile"]

[dependencies]
libnetman = { path = "../libnetman", version = "0.1.0" }

anyhow.workspace = true
clap.workspace = true
crossterm.workspace = true
ratatui.workspace = true
serde.workspace = true
toml.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile = "3"
